--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./app.js" defer></script>
   </head>
   <body>
+      <h1>Snake game</h1>
       <canvas id='canvas' width="400" height="400"></canvas>
   </body>
 </html>
